6.1
	+ Set version to 6.1
6.0
	+ Depend on gnupg as it is used by spamassassin postinst script
5.1
	+ Set version to 5.1
5.0.1
	+ Fix amavis conf regression for 16.04
5.0
	+ Update version to 5.0
4.2
	+ Update version to 4.2
4.1.1
	+ Added doc regarding expected format for learning
	+ Removed size restriction regarding size of provided mbox for
	  learning
4.1
	+ Remove wrong call to checkUsersMode after external AD removal
4.0.3
	+ Changed stub to not give points based on AHBL_RHSBL, given it is
	  shut down and answering with false positives:
	  http://www.ahbl.org/content/last-notice-wildcarding-services-jan-1st
	+ Remove amavis-new warnings due to deprecated config keys
4.0.2
	+ Fixed bugs related when setting and removing virtual domain
	  antispam options
4.0.1
	+ Adding new dependency needed by amavis and spamassassin
	+ Fixed LDAP schema: white and black list are multi-valued
4.0
	+ Remove ads on deprecated features
	+ Set version to 4.0
3.5
	+ Fixed running status of module components
	+ Adapted to Samba4 instead of OpenLDAP
	+ Set version to 3.5
3.4
	+ Changed configuration of amavis to avoid only ipv6 in Net::LDAP bug
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Fixed logs summarized report
3.3
	+ Take in account mail dependency if mail module is enabled
	+ Switch from Error to TryCatch for exception handling
	+ Update strings to new offering
	+ Added missing EBox::Exceptions uses
	+ Avoid call to mailfilter-ldap script from enableActions
	+ Removed old migration code from 3.0 to 3.2
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.4
	+ Set ham and spam users as internal when migrating from 3.0
3.1.3
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
	+ Adapted mailfilter-ldap script to the new users API
3.1.2
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Removed dkim_verification obsolete option from the local conf