@@ -1,4 +1,5 @@
 6.1
+	+ Fix mailfilter logs for Logs module
 	+ Set version to 6.1
 6.0
 	+ Depend on gnupg as it is used by spamassassin postinst script
